<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_wfd</name>
  <version>0.0.1</version>
  <description>Wavefront Frontier Detector for ROS2 Navigation2</description>
  <maintainer email="dev@mail.com">Sean Regan</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <!-- <exec_depend>numpy</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
